--- a/Blog.web/Views/AdminTags/Add.cshtml
+++ b/Blog.web/Views/AdminTags/Add.cshtml
@@ -1,6 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Blog.web.Models.ViewModels.AddTagRequest
 @{
 }
 
@@ -15,12 +13,12 @@
     <form method="post">
         <div class="mb-3">
             <label class="form-label">Name</label>
-            <input type="text" class="form-control" id="name"/>
+            <input type="text" class="form-control" id="name" name="name" asp-for="Name"/>
         </div>
 
         <div class="mb-3">
             <label class="form-label">Display Name</label>
-            <input type="text" class="form-control" id="displayName"/>
+            <input type="text" class="form-control" id="displayName" name="display_name" asp-for="DisplayName"/>
         </div>
 
         <div class="mb-3">
