--- a/Blog.web/Views/AdminTags/Add.cshtml
+++ b/Blog.web/Views/AdminTags/Add.cshtml
@@ -13,12 +13,12 @@
     <form method="post">
         <div class="mb-3">
             <label class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" name="name" asp-for="Name"/>
+            <input type="text" class="form-control" id="name" asp-for="Name"/>
         </div>
 
         <div class="mb-3">
             <label class="form-label">Display Name</label>
-            <input type="text" class="form-control" id="displayName" name="display_name" asp-for="DisplayName"/>
+            <input type="text" class="form-control" id="displayName" asp-for="DisplayName" />
         </div>
 
         <div class="mb-3">
